# fish

./: .gitignore  CMakeLists.txt  README.md
cmake/: FindPDCurses.cmake  Findcxxopts.cmake
src/: CMakeLists.txt  fish.cpp  fish.hpp  main.cpp
